--- a/style.css
+++ b/style.css
@@ -26,3 +26,25 @@ input[type="range"] {
   font-size: 1.2rem;
   transform: translateY(-3px);
 }
+img {
+  height: 100px;
+  width: 160px;
+  object-fit: cover;
+}
+
+.countries-container {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.card{
+  flex: 1 0 20%;
+  min-width: 260px;
+  background: rgb(32, 30, 30);
+  margin: 5px;
+  border-radius: 20px;
+  padding: 20px;
+  color: rgb(234, 229, 229);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
